--- a/siteDevelopment/css/styles.css
+++ b/siteDevelopment/css/styles.css
@@ -210,7 +210,7 @@ nav li a:hover {
 
 
 /*----------------RWD for mobile-------------------*/
-@media (max-width:800px){
+@media (max-width:600px){
 	.flex-container {
     flex-direction: column;
 	}     
@@ -301,7 +301,7 @@ nav li a:hover {
 }
 
 #itema{
-	padding: 0;
+	padding: 0px 50px 0px 0px;
 	flex: 50%;
 	color: white;
 	font-size: 40px;
